== Changelog ==

= 2.0 =
*Release Date - xx October 2021*

* New: New menu for Lipsum Dynamo.
* New: Cleanup tool to generate dummy items of specific post type.
* Changed: Exclude attachment post type in Lipsum Dynamo.

= 1.1.0 =
*Release Date - 22 Septempber 2021*

* New: Add option to control length of dummy text for Title, Excerpt and Content.
* Changed: Add option to prevent deleting generated items but still cleanup database.
* Fixed: Check database table exists before creating the new one.

= 1.0.0 =
*Release Date - 07 Septempber 2021*

* The very first version